--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,16 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
-      - ASPNETCORE_HTTPS_PORTS=8081
+      - ASPNETCORE_HTTPS_PORTS=8081;5173
+      - ASPNETCORE_URLS=https://+:443;http://+:80
+
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
     ports:
       - "8080"
       - "8081"
+      - "5173"
 
   universityprocessing.postgresql:
     container_name: ${DOCKER_REGISTRY-}universityprocessing-postgresql
