--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "resolutions": {
+    "@types/react": "18.0.1"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -20,10 +23,27 @@
     "@types/react-redux": "^7.1.30",
     "axios": "^1.6.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^27.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.8",
+    "bootstrap": "^5.0.2",
+    "jest": "26.6.0",
+    "jwt-decode": "^3.1.2",
+    "react-app-rewired": "^2.1.8",
+    "react-scripts": "4.0.3",
+    "sass": "^1.37.0",
+    "typescript": "~4.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
