--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,6 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
     "redux": "^4.2.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^27.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -41,9 +38,8 @@
     "jest": "26.6.0",
     "jwt-decode": "^3.1.2",
     "react-app-rewired": "^2.1.8",
-    "react-scripts": "4.0.3",
     "sass": "^1.37.0",
-    "typescript": "~4.1.5"
+    "typescript": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
