--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,6 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "resolutions": {
-    "@types/react": "18.0.1"
-  },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -23,31 +20,16 @@
     "@types/react-redux": "^7.1.30",
     "axios": "^1.6.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^5.3.4",
-    "redux": "^4.2.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^27.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.8",
-    "bootstrap": "^5.0.2",
-    "jest": "26.6.0",
-    "jwt-decode": "^3.1.2",
-    "react-app-rewired": "^2.1.8",
-    "react-scripts": "4.0.3",
-    "sass": "^1.37.0",
-    "typescript": "~4.1.5"
+    "react-router-dom": "^6.15.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "5.3",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -58,5 +40,8 @@
     "tailwindcss": "^3.3.6",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "resolutions": {
+    "@types/react": "~17.0.47"
   }
 }
