--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres"
+  },
+  "AuthOptions": {
+    "ValidateIssuer": false,
+    "ValidateAudience": false,
+    "ValidateIssuerSigningKey": false,
+    "ValidIssuer": "UniversityProcessing.API",
+    "ValidAudience": "UniversityProcessing.WebApp",
+    "Key": "SUPER_SIGNING_KEY",
+    "LifetimeMinutes": 720,
+    "RefreshLifetimeMinutes" : 3500
   }
 }
