--- a/server/UniversityProcessing.API.csproj
+++ b/server/UniversityProcessing.API.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="EFCore.NamingConventions" Version="8.0.0-rc.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.SpaProxy">
 			<Version>8.*-*</Version>
@@ -42,7 +43,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Folder Include="Domain\DTOs\" />
+	  <Folder Include="Services\" />
 	</ItemGroup>
 
 </Project>
