--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,30 +1,25 @@
-#See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
-RUN apt-get update
-RUN apt-get install -y curl
-RUN apt-get install -y libpng-dev libjpeg-dev curl libxi6 build-essential libgl1-mesa-glx
-RUN curl -sL https://deb.nodesource.com/setup_lts.x | bash -
-RUN apt-get install -y nodejs
+EXPOSE 8080
+EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-RUN apt-get update
-RUN apt-get install -y curl
-RUN apt-get install -y libpng-dev libjpeg-dev curl libxi6 build-essential libgl1-mesa-glx
-RUN curl -sL https://deb.nodesource.com/setup_lts.x | bash -
-RUN apt-get install -y nodejs
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["server/UniversityProcessing.API.csproj", "server/"]
-RUN dotnet restore "server/UniversityProcessing.API.csproj"
+COPY ["client/nuget.config", "UniversityProcessing.WebApp/"]
+COPY ["server/UniversityProcessing.API.csproj", "UniversityProcessing.API/"]
+COPY ["client/UniversityProcessing.WebApp.esproj", "UniversityProcessing.WebApp/"]
+RUN dotnet restore "./UniversityProcessing.API/./UniversityProcessing.API.csproj"
 COPY . .
-WORKDIR "/src/server"
-RUN dotnet build "UniversityProcessing.API.csproj" -c Release -o /app/build
+WORKDIR "/src/UniversityProcessing.API"
+RUN dotnet build "./UniversityProcessing.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "UniversityProcessing.API.csproj" -c Release -o /app/publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./UniversityProcessing.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
