--- a/server/UniversityProcessing.API.csproj
+++ b/server/UniversityProcessing.API.csproj
@@ -14,6 +14,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Services\**" />
+	  <Content Remove="Services\**" />
+	  <EmbeddedResource Remove="Services\**" />
+	  <None Remove="Services\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="EFCore.NamingConventions" Version="8.0.0-rc.2" />
@@ -37,13 +44,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\universityprocessing.client\universityprocessing.client.esproj">
-			<ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-		</ProjectReference>
+	  <Folder Include="Domain\API\Identity\" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Services\" />
+		<ProjectReference Include="..\client\UniversityProcessing.WebApp.esproj">
+			<ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+		</ProjectReference>
 	</ItemGroup>
 
 </Project>
