--- a/client/.env.development
+++ b/client/.env.development
@@ -1,3 +1,3 @@
 VITE_APP_TITLE="My App (Development)"
 VITE_IS_DEVELOPMENT=true
-VITE_BACKEND_BASEURL="http://localhost:8000"
+VITE_BACKEND_BASEURL="https://localhost:7197"
