--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@types/react-redux": "^7.1.30",
     "axios": "^1.6.2",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
