Directories were restructured

--- a/src/UniversityProcessing.WebApp/package.json
+++ b/src/UniversityProcessing.WebApp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "universityprocessing.client",
+  "name": "UniversityProcessing.WebApp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
