--- a/src/UniversityProcessing.API/UniversityProcessing.API.csproj
+++ b/src/UniversityProcessing.API/UniversityProcessing.API.csproj
@@ -21,21 +21,25 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
 
-		
+		<PackageReference Include="AutoMapper" Version="13.0.0" />
+
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />	
 		<PackageReference Include="Microsoft.AspNetCore.SpaProxy">
 			<Version>8.0.1</Version>
 		</PackageReference>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\client\UniversityProcessing.WebApp.esproj">
+		<ProjectReference Include="..\UniversityProcessing.WebApp\UniversityProcessing.WebApp.esproj">
 			<ReferenceOutputAssembly>false</ReferenceOutputAssembly>
 		</ProjectReference>
 		<ProjectReference Include="..\UniversityProcessing.Infrastructure\UniversityProcessing.Infrastructure.csproj" />
-		<ProjectReference Include="..\UniversityProcessing.Shared\UniversityProcessing.Shared.csproj" />
+		<ProjectReference Include="..\UniversityProcessing.Domain\UniversityProcessing.Domain.csproj" />
 	</ItemGroup>
 
 </Project>
