--- a/src/UniversityProcessing.Domain/UniversityProcessing.Domain.csproj
+++ b/src/UniversityProcessing.Domain/UniversityProcessing.Domain.csproj
@@ -10,9 +10,13 @@
 		<PackageReference Include="Ardalis.GuardClauses" Version="4.4.0" />
 		<PackageReference Include="Ardalis.Result" Version="7.2.0" />
 		<PackageReference Include="Ardalis.Specification" Version="8.0.0" />
+		<PackageReference Include="Serilog" Version="3.1.1" />
+		<PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
 		<PackageReference Include="System.Security.Claims" Version="4.3.0" />
 		<PackageReference Include="System.Text.Json" Version="8.0.1" />
-		
+		<PackageReference Include="AutoMapper" Version="13.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.1" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.3.1" />
 	</ItemGroup>
