--- a/src/UniversityProcessing.Infrastructure/UniversityProcessing.Infrastructure.csproj
+++ b/src/UniversityProcessing.Infrastructure/UniversityProcessing.Infrastructure.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\UniversityProcessing.Repository\UniversityProcessing.Repository.csproj"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\"/>
+  </ItemGroup>
+
 </Project>
