--- a/src/UniversityProcessing.WebApp/package.json
+++ b/src/UniversityProcessing.WebApp/package.json
@@ -15,33 +15,33 @@
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fontsource/inter": "^5.0.16",
     "@mui/icons-material": "^5.15.19",
     "@mui/lab": "^5.0.0-alpha.165",
-    "@mui/material": "^5.15.19",
+    "@mui/material": "^5.16.7",
     "@mui/utils": "^5.15.11",
-    "@mui/x-date-pickers": "^7.6.1",
+    "@mui/x-date-pickers": "^7.18.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@tabler/icons-react": "^2.47.0",
     "@vitejs/plugin-react": "^4.2.1",
     "apexcharts": "^3.46.2",
     "async-mutex": "^0.5.0",
     "axios": "^1.7.2",
-    "date-fns": "2.28.0",
+    "dayjs": "^1.11.13",
     "env-cmd": "^10.1.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.6",
     "material-react-table": "^2.13.0",
     "material-ui-popup-state": "^5.0.10",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
+    "react": "^18.3.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
     "react-custom-scrollbars-2": "4.5.0",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
