--- a/src/UniversityProcessing.API/UniversityProcessing.API.csproj
+++ b/src/UniversityProcessing.API/UniversityProcessing.API.csproj
@@ -20,6 +20,7 @@
     <Folder Include="Endpoints\Admin\Universities\"/>
     <Folder Include="Endpoints\Admin\Users\"/>
     <Folder Include="Logs\"/>
+    <Folder Include="Validators\"/>
     <Folder Include="wwwroot\"/>
     <Folder Include="wwwroot\client\"/>
   </ItemGroup>
