--- a/src/UniversityProcessing.WebApp/package.json
+++ b/src/UniversityProcessing.WebApp/package.json
@@ -30,6 +30,7 @@
     "dayjs": "^1.11.13",
     "env-cmd": "^10.1.0",
     "formik": "^2.4.6",
+    "notistack": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-custom-scrollbars-2": "4.5.0",
