--- a/src/UniversityProcessing.WebApp/jsconfig.json
+++ b/src/UniversityProcessing.WebApp/jsconfig.json
@@ -6,7 +6,7 @@
   },
   "include": [
     "src/**/*"
-  ],
+, "src/features/admin/Users/components/.tsx"  ],
   "exclude": [
     "node_modules"
   ]
