--- a/src/UniversityProcessing.WebApp/tsconfig.json
+++ b/src/UniversityProcessing.WebApp/tsconfig.json
@@ -59,7 +59,8 @@
     "openapi-config.cts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/TODO/**"
   ],
   "references": [
     {
