--- a/src/UniversityProcessing.WebApp/tsconfig.json
+++ b/src/UniversityProcessing.WebApp/tsconfig.json
@@ -27,6 +27,7 @@
     "jsx": "react-jsx",
     /* Linting */
     "strict": true,
+    "noImplicitAny": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
