--- a/src/UniversityProcessing.API/appsettings.json
+++ b/src/UniversityProcessing.API/appsettings.json
@@ -25,7 +25,7 @@
     "ShortName": "БНТУ"
   },
   "DatabaseSettings": {
-    "ConnectionString": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres",
+    "ConnectionString": "Server=db28711.databaseasp.net; Database=db28711; User Id=db28711; Password=tD+4K?6s2m#C; Encrypt=False; MultipleActiveResultSets=True;",
     "SqliteConnectionString": "Data Source=ApplicationDbContext.db"
   },
   "IdentitySettings": {
