--- a/src/UniversityProcessing.Infrastructure/UniversityProcessing.Infrastructure.csproj
+++ b/src/UniversityProcessing.Infrastructure/UniversityProcessing.Infrastructure.csproj
@@ -4,6 +4,7 @@
     <PackageReference Include="Ardalis.Specification.EntityFrameworkCore"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite"/>
     <PackageReference Include="EFCore.NamingConventions"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer"/>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
       <PrivateAssets>all</PrivateAssets>
