--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,6 +9,7 @@
     <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.2"/>
     <PackageVersion Include="Microsoft.AspNetCore.Mvc" Version="2.2.0"/>
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10"/>
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.20"/>
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.7.0"/>
     <PackageVersion Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0"/>
     <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.19"/>
