--- a/src/UniversityProcessing.WebApp/.env.production
+++ b/src/UniversityProcessing.WebApp/.env.production
@@ -1,3 +1,3 @@
-VITE_APP_TITLE="My App (Production)"
+﻿VITE_APP_TITLE="My App (Production)"
 VITE_IS_DEVELOPMENT=false
-VITE_BACKEND_BASEURL="https://bntu"
+VITE_BACKEND_BASEURL=http://diploma-designing.runasp.net
