--- a/src/UniversityProcessing.API/appsettings.json
+++ b/src/UniversityProcessing.API/appsettings.json
@@ -25,7 +25,7 @@
     "ShortName": "БНТУ"
   },
   "DatabaseSettings": {
-    "ConnectionString": "Server=db28711.databaseasp.net; Database=db28711; User Id=db28711; Password=tD+4K?6s2m#C; Encrypt=False; MultipleActiveResultSets=True;",
+    "ConnectionString": "Server=db28718.databaseasp.net; Database=db28718; User Id=db28718; Password=Wq3%!9BkhE@7; Encrypt=False; MultipleActiveResultSets=True;",
     "SqliteConnectionString": "Data Source=ApplicationDbContext.db"
   },
   "IdentitySettings": {
