--- a/src/UniversityProcessing.API/appsettings.Development.json
+++ b/src/UniversityProcessing.API/appsettings.Development.json
@@ -1,2 +1,5 @@
 {
+  "DatabaseSettings": {
+    "ConnectionString": "Host=localhost;Port=5432;Database=university;User Name=postgres;Password=postgres"
+  }
 }
