--- a/src/UniversityProcessing.API/appsettings.json
+++ b/src/UniversityProcessing.API/appsettings.json
@@ -25,8 +25,7 @@
     "ShortName": "БНТУ"
   },
   "DatabaseSettings": {
-    "ConnectionString": "Server=db28718.databaseasp.net; Database=db28718; User Id=db28718; Password=Wq3%!9BkhE@7; Encrypt=False; MultipleActiveResultSets=True;",
-    "SqliteConnectionString": "Data Source=ApplicationDbContext.db"
+    "ConnectionString": "Server=db28718.databaseasp.net; Database=db28718; User Id=db28718; Password=Wq3%!9BkhE@7; Encrypt=False; MultipleActiveResultSets=True;"
   },
   "IdentitySettings": {
     "RequireUppercase": false,
