--- a/src/UniversityProcessing.API/appsettings.Development.json
+++ b/src/UniversityProcessing.API/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "DatabaseSettings": {
-    "ConnectionString": "Host=localhost;Port=5432;Database=university;User Name=postgres;Password=postgres"
+    "ConnectionString": "Server=localhost,1433;Database=university;User Id=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;"
   }
 }
